--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <main class="container">
     <section class="aviso">
-        <h1>Foco e Prazer</h1>
+        <h1>Cleane e Priscila</h1>
         <h2>Este site foi feito na intenção de ajudar e para interagir "Aproveitem"</h2>
 
     </section>    
@@ -63,7 +63,7 @@
 <div class="painel">
     <a href="#" onclick="modal.open()"> <h1> Filmes e Séries </h1>
 
-        <p>Aqui você tem filmes e séries para descotrair e talves conquistar uma gata</p>
+        <p>Aqui você tem filmes e séries para descotrair e talves </p>
        <!-- <script>
 
         // aula 06 exercicio 004
