atualizando as boa vindas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <main class="container">
     <section class="aviso">
-        <h1>Cleane e Priscila</h1>
+        <h1>Site em desenvolvimento!</h1>
         <h2>Este site foi feito na intenção de ajudar e para interagir "Aproveitem"</h2>
 
     </section>    
